Reverted grunt changes while we wait for the fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,8 @@
   });
 </script>
 
-<script src='/public/dist/distribution.min.js'></script>
-<!--
+<!-- <script src='/public/dist/distribution.min.js'></script> -->
+
 <script src='/client/app.js'></script>
 <script src='/client/link.js'></script>
 <script src='/client/links.js'></script>
@@ -51,4 +51,4 @@
 <script src='/client/createLinkView.js'></script>
 <script src='/client/router.js'></script>
 
- -->
+
